--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
   }
   
   body {
-    font-family: "Merriweather", serif;
+    font-family: 'Merriweather', serif;
     background-color: #ebf2ff;
   }
   
